--- a/healthcare-system.csproj
+++ b/healthcare-system.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>healthcare_system</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
