Modification of db context and db connection string to postgres db

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApiDatabase": "Host=localhost; Database=Healthcare; Port=5433; Username=postgres; Password=jan12345"
+  }
 }
