--- a/healthcare-system.csproj
+++ b/healthcare-system.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\NewFolder1\**" />
+    <Content Remove="Data\NewFolder1\**" />
+    <EmbeddedResource Remove="Data\NewFolder1\**" />
+    <None Remove="Data\NewFolder1\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
       <PrivateAssets>all</PrivateAssets>
