--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=localhost; Database=Healthcare; Port=5433; Username=postgres; Password=Jan12345"
+    "WebApiDatabase": "Host=localhost; Database=Healthcare; Port=5433; Username=postgres; Password=jan12345"
   }
 }
