Added the connection string to azure sql server(login working)

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=localhost; Database=Healthcare; Port=5433; Username=postgres; Password=Jan12345"
+    "WebApiDatabase": "Host=localhost; Database=Healthcare; Port=5433; Username=postgres; Password=jan12345",
+    "Cloud": "Server=tcp:picaolimpija.database.windows.net,1433;Initial Catalog=Healthcare;Persist Security Info=False;User ID=is-admin;Password=a!z2R2zsznkDc4;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   }
 }
